force-app/main/default/objects/Case_Team_Creation_Rules__mdt.object
<CustomObject>
    <description>Allows automatically adding a Case Team under an Enquiry when a record is assigned to a Queue.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied_to_Enquiry_Record_Types__c</fullName>
        <inlineHelpText>Enquiry record types this rule applies.

*use semicolon as a delimiter
*use Record Type DeveloperName</inlineHelpText>
        <label>Applied to Enquiry Record Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Team_Template__c</fullName>
        <label>Case Team Template</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MGRO</fullName>
                </value>
                <value>
                    <fullName>Arts - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>BusEco - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Education - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Engineering - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>FIT - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Law - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MNHS - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MADA - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Pharmacy - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Science - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MSI - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MUARC - Graduate Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Notification_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends an email notification to all Queue members - direct users only</description>
        <label>Email Notification to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MGRO Admissions</fullName>
                    <default>true</default>
                    <label>MGRO Admissions</label>
                </value>
                <value>
                    <fullName>MGRO Bookings</fullName>
                </value>
                <value>
                    <fullName>MGRO Candidature Operations</fullName>
                </value>
                <value>
                    <fullName>MGRO Directors Office</fullName>
                </value>
                <value>
                    <fullName>MGRO Engagement</fullName>
                </value>
                <value>
                    <fullName>MGRO Industry</fullName>
                </value>
                <value>
                    <fullName>MGRO MyDevelopment</fullName>
                </value>
                <value>
                    <fullName>MGRO Programs and Development</fullName>
                </value>
                <value>
                    <fullName>MGRO Scholarships</fullName>
                </value>
                <value>
                    <fullName>MGRO Supervisor Accreditation</fullName>
                </value>
                <value>
                    <fullName>MGRO Thesis Examinations</fullName>
                </value>
                <value>
                    <fullName>Arts - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>BusEco - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Education - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Engineering - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>FIT - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Law - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MNHS - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MADA - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Pharmacy - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>Science - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MSI - Graduate Research</fullName>
                </value>
                <value>
                    <fullName>MUARC - Graduate Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Team Creation Rules</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>Applied_to_Enquiry_Record_Types__c</columns>
        <columns>Queue__c</columns>
        <columns>Case_Team_Template__c</columns>
        <columns>Email_Notification_to_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MGRO</fullName>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>Applied_to_Enquiry_Record_Types__c</columns>
        <columns>Queue__c</columns>
        <columns>Case_Team_Template__c</columns>
        <columns>Email_Notification_to_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>MGRO</value>
        </filters>
        <label>MGRO</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Case Team Creation Rules</pluralLabel>
</CustomObject>